v3.7
-----
: Changed "Total Spent" text to regular color (not red)
: Fixed a bug where background selection was showing on profile security page
+ Added "help" question mark next to options that links to the feature on enhancedsteam.com
: Changed changelog textarea to be readonly
: Changed "Enhanced Steam" dropdown to disappear if user clicks somewhere

v3.6
-----
: Fixed a bug where custom profile backgrounds weren't saving properly in some instances
: Fixed a bug causing custom profile backgrounds not to show if not logged in
: Fixed a bug causing javascript errors when not logged in
: Fixed a bug where the "Empty Wishlist" button wasn't displaying properly for some languages
: Updated Japanese and Russian translations

v3.5
-----
+ Added ability to set custom background for all Enhanced Steam users visiting your profile
+ Added additional translation fields to the options page
: Updated Russian and Spanish translations

v3.4
-----
: Fixed a few bugs with coupon formatting
+ Added highlighting for Steam Trading Cards in the market
+ Added an experimental feature that shows market prices on inventory page (disabled by default)
: Fixed a bug where DLC categories wouldn't show if the language wasn't English
+ Added French translation courtesy of Yanuut
+ Added Japanese translation courtesy of planicrand
- Remove group events as they're hardly used by anyone and code was buggy

v3.3
-----
+ "Packs" will now be marked as owned if you own all games in the pack
: Fixed a bug where account total not calculating if purchases made in euro or rubles
: Fixed a bug where storefront items with no description break carousel
+ Enhanced Steam cache will now clear when logging out of your Steam account

v3.2
-----
+ Added ability to filter price history to user selected stores
+ Added "Credits" section to the options page, giving credit to contributors
+ Added "Reset all options to Default Settings" on "About" page in options