@@ -391,13 +391,31 @@
 					</table>
 				</td>				
 			</tr>
-						
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="showlibrarymenu">
+				</td>
+				<td height=30>
+					<div id="store_show_library_text" class="text">Show Library button in header (BETA)</div>
+				</td>
+			</tr>
+			
 			<tr>
 				<td>
 					<input type="checkbox" id="hideinstallsteambutton">
 				</td>
 				<td height=30>
 					<div id="store_hide_install_text" class="text">Hide "Install Steam" button in header</div>
+				</td>
+			</tr>
+			
+			<tr>
+				<td>
+					<input type="checkbox" id="hideaboutmenu">
+				</td>
+				<td height=30>
+					<div id="store_hide_about_menu" class="text">Hide About link in header</div>
 				</td>
 			</tr>
 
